<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TestPipeParentClass</class>
 <widget class="QMainWindow" name="TestPipeParentClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>TestPipeParent</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="QPushButton" name="m_sendBtn">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>80</y>
      <width>93</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
     <string>发送</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="m_sendText">
    <property name="geometry">
     <rect>
      <x>200</x>
      <y>40</y>
      <width>301</width>
      <height>141</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="m_receiveBtn">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>290</y>
      <width>93</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
     <string>接收</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="m_receiveText">
    <property name="geometry">
     <rect>
      <x>200</x>
      <y>230</y>
      <width>301</width>
      <height>141</height>
     </rect>
    </property>
   </widget>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="testpipeparent.qrc"/>
 </resources>
 <connections/>
</ui>
